--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Header Section  */
 h1{
     color: rgb(7, 62, 113);
-    height:20px;
+    font-size: 29px;
 }
 marquee{
     color:rgb(9, 84, 84);
@@ -11,15 +11,14 @@ marquee{
 /* Navigation bar and Footer section  */
 footer,nav{
     color:white;
-    height:40px;
-    width:100%;
+    height:50px;
     background-color:rgb(7, 62, 113) ;
 
 }
 a{
     color:white;
     font-size: 20px;
-    margin-left: 15px;
+    margin-left: 7px;
 
 }
 /* Main section  */
