--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,35 @@
 /* Header Section  */
 h1{
     color: rgb(7, 62, 113);
-    font-size: 20px;
+    font-size: 18px;
+}
+p{
+    margin-top:1px;
+}
+hr{
+    margin-top: 1px;
 }
 marquee{
     color:rgb(9, 84, 84);
     background-color: bisque;
+    height:40px;
+    width:100%;
+}
+h4{
+    margin-top:10px;
+    font-size: 20px;
 }
 
 /* Navigation bar and Footer section  */
 footer,nav{
     color:white;
-    height:50px;
+    height:40px;
+    width:100%;
     background-color:rgb(7, 62, 113) ;
 
 }
 a{
+    margin-bottom: 5px;
     color:white;
     font-size: 15px;
     margin-left: 5px;
