--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,10 @@ footer,nav{
 
 }
 a{
-    margin-bottom: 5px;
+    margin-top: 10px;
     color:white;
-    font-size: 15px;
-    margin-left: 5px;
+    font-size: 17px;
+    margin-left: 6px;
 
 }
 /* Main section  */
