--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,18 @@
 h1{
     color: rgb(7, 62, 113);
     font-size: 18px;
+    text-shadow: 4px 4px 4px rgb(218, 165, 68);
+    text-align: center;
 }
 p{
     margin-top:1px;
+    text-align: center;
 }
 hr{
     margin-top: 1px;
+    color:rgba(100, 94, 94, 0.977);
+    size:3;
+    
 }
 marquee{
     color:rgb(9, 84, 84);
@@ -26,6 +32,7 @@ footer,nav{
     height:40px;
     width:100%;
     background-color:rgb(7, 62, 113) ;
+    text-align: center;
 
 }
 a{
@@ -38,6 +45,7 @@ a{
 /* Main section  */
 h2,h3{
     color:rgb(7, 62, 113);
+    text-align: center;
 }
 button{
     background-color:rgb(7, 62, 113) ;
@@ -45,14 +53,19 @@ button{
     height:30px;
     width:150px;
     font-size: 15px;
+    text-align: center;
+}
+iframe,button{
+    display: block;
+    margin: auto;
 }
 pre{
     font-family:'Times New Roman', Times, serif;
+    text-align: center;
 }
-
-hr{
-    color:rgba(100, 94, 94, 0.977);
-    size:3;
+ul,ol{
+    width: fit-content;
+    margin: auto;
 }
 /* About table */
 caption{
@@ -70,7 +83,10 @@ tbody{
 table{
     height:200px;
     width:350px;
+    text-align: center;
+    margin: auto;
 }
 td{
     margin-left: 15px;
 }
+
