--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ td{
 .hero{
     height:500px;
     width: 100%;
-    background-image: url("/images/hero.png");
+    background-image: url("../images/hero.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
