--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
 /* Header Section  */
+
+*{
+  font-family:'Times New Roman', Times, serif;
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 h1{
     color: rgb(7, 62, 113);
     font-size: 20px;
@@ -7,9 +19,20 @@ h1{
     text-decoration: underline;
     text-transform: uppercase;
 }
+.outside_ul{
+    text-align: center;
+    color:rgb(5, 50, 93);
+    list-style: none;
+    line-height: 20px;
+}
+.list_space{
+    list-style: none;
+    color: rgb(207, 123, 28);
+}
 p{
     text-align: center;
 }
+
 hr{
     margin-top: 1px;
     color:rgba(100, 94, 94, 0.977);
@@ -34,12 +57,12 @@ footer,nav{
     width:100%;
     background-color:rgb(7, 62, 113) ;
     text-align: center;
-    padding-top: 15px;
+    padding-top: 13px;
 
 }
 #foot{
-    margin-top: 5px;
-    padding-top: 1px;
+    margin-top: 15px;
+    padding-top:1px;
     font-size: 13px;
 }
 a{
@@ -79,17 +102,31 @@ iframe,button{
     display: block;
     margin: auto;
 }
-pre{
-    font-family:'Times New Roman', Times, serif;
-    text-align: center;
+pre {
+  width: 80%;
+  background-color: rgb(240, 221, 153);
+  padding: 20px;
+  margin: 0 auto;
+  font-size: 20px;
+  line-height: 1.3;  
+  box-shadow: 7px 7px 9px rgb(3, 108, 108);
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap:break-word;
+}
+pre:hover{
+    background-color:rgb(18, 150, 150);
+    box-shadow: 7px 7px 9px rgb(72, 71, 67) ; 
 }
 
 /* About table */
 caption{
     color:rgb(7, 62, 113);
+    font-size: 20px;
+    padding-top: 12px;
 }
 thead{
-    color:rgb(3, 108, 108);
+    color:rgb(7, 62, 113);
     background-color:rgb(240, 221, 153);
 }
 tbody{
@@ -102,6 +139,7 @@ table{
     width:350px;
     text-align: center;
     margin: auto;
+   
 }
 td{
     margin-left: 15px;
@@ -113,11 +151,11 @@ td{
     box-shadow: 6px 6px 9px rgb(32, 117, 197);
 }
 .hero{
-    height:500px;
+    height:400px;
     width: 100%;
     background-image: url("../images/hero.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:center;
     background-size:cover;
 }
 /* .hero_text{
@@ -160,5 +198,9 @@ figcaption:hover{
     border: none;
 }
 #space{
-    padding-top: 200px;
+   padding-top: 150px;
+   font-size: 24px;
+   color:rgb(7, 62, 113);
+   text-align: center;
 }
+
