--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h4{
 }
 
 /* Navigation bar and Footer section  */
-footer,nav{
+nav{
     color:white;
     height:40px;
     width:100%;
@@ -59,6 +59,14 @@ footer,nav{
     text-align: center;
     padding-top: 13px;
 
+}
+footer{
+    color:white;
+    height:40px;
+    width:100%;
+    background-color:rgb(7, 62, 113) ;
+    text-align: center;
+    padding-top: 13px;
 }
 #foot{
     margin-top: 15px;
@@ -92,6 +100,7 @@ button{
     font-size: 15px;
     text-align: center;
     border: none;
+    border-radius: 10px;
 }
 button:hover{
     color:rgb(7, 62, 113);
@@ -129,17 +138,23 @@ thead{
     color:rgb(7, 62, 113);
     background-color:rgb(240, 221, 153);
 }
+/* thead:hover{
+    background-color:rgb(7, 62, 113);
+    color:rgb(240, 221, 153);
+} */
 tbody{
     color:rgb(240, 221, 153);
-    background-color:rgb(3, 108, 108);
-    
+    background-color:rgb(7, 62, 113);  
 }
+/* tbody:hover{
+    background-color:rgb(240, 221, 153);
+    color:rgb(7, 62, 113);
+} */
 table{
     height:200px;
     width:350px;
     text-align: center;
-    margin: auto;
-   
+    margin: auto; 
 }
 td{
     margin-left: 15px;
@@ -148,12 +163,17 @@ td{
     height:350px;
     width:350px;
     margin: auto;
-    box-shadow: 6px 6px 9px rgb(32, 117, 197);
+    box-shadow: 7px 7px 7px rgb(11, 90, 164);
+    /* border: 2px solid rgb(7, 62, 113);
+    padding:5px */
+}
+.img-size:hover{
+    transform: scale(1.0985);
 }
 .hero{
     height:400px;
     width: 100%;
-    background-image: url("../images/hero.png");
+    background-image: url("/images/hero.png");
     background-repeat: no-repeat;
     background-position:center;
     background-size:cover;
@@ -170,12 +190,43 @@ td{
 figcaption{
     color:rgb(7, 62, 113);
     text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 20px;
+    padding-bottom:20px;
+    font-size: 20px;
 }
 figcaption:hover{
     color:rgb(255, 115, 0);
-
+}
+legend{
+    text-align: center;
+    font-size: 20px;
+    color:rgb(7, 62, 113);
+}
+fieldset{
+    width:20%;
+    display: flex;
+    justify-content: center;
+}
+.form_box{
+    display: flex;
+    justify-content: center;
+    height:350px;
+}
+label{
+    font-size: 20px;
+}
+input{
+    height:30px;
+    font-size: 20px;
+    text-align: center;
+    background-color:rgb(255, 115, 0) ;
+    color:rgb(7, 62, 113);
+    border:none;
+    border-radius: 10px;
+}
+input:focus{
+    background-color: rgb(110, 106, 108);
+    color:rgb(246, 246, 246);
 }
 .contact{
     background-color:rgb(240, 221, 153);
@@ -183,6 +234,12 @@ figcaption:hover{
     width:300px;
     margin: auto;
     box-shadow: 7px 7px 7px rgb(7, 62, 113);
+    border-radius: 15px;
+}
+.contact:hover{
+    background-color: rgb(3, 108, 108);
+    box-shadow: 7px 7px 7px rgb(240, 221, 153);
+    transform: scale(1.2);
 }
 #c_text{
     padding-top: 30px;
@@ -196,6 +253,7 @@ figcaption:hover{
     height: 300px; 
     width: 300px;
     border: none;
+    border-radius: 15px;
 }
 #space{
    padding-top: 150px;
@@ -203,4 +261,18 @@ figcaption:hover{
    color:rgb(7, 62, 113);
    text-align: center;
 }
+
+/* psuedo elaments and classes */
+::selection{
+    color:white;
+    background-color: grey;
+}
+/* input::placeholder{
+    background-color: grey;
+    color:red;
+} */
+ ::placeholder{
+    color:black;
+
+ }
 
