--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ html, body {
   padding: 0;
   overflow-x: hidden;
 }
+/* .logo{
+    text-align: center;
+}
+.logo img{
+    height:80px;
+    width:100px;     
+} */
 h1{
     color: rgb(7, 62, 113);
     font-size: 20px;
@@ -56,10 +63,19 @@ nav{
     height:40px;
     width:100%;
     background-color:rgb(7, 62, 113) ;
-    text-align: center;
-    padding-top: 13px;
-
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    text-align:center;
+    /* padding-left: 12px; */
+    padding-top: 10px;
+    
 }
+#menu{
+    padding-left: 10px;
+    font-size: 20px;
+}
+
 footer{
     color:white;
     height:40px;
@@ -77,7 +93,7 @@ a{
     margin-top: 10px;
     color:white;
     font-size: 17px;
-    margin-left: 6px;
+    margin-left: 10px;
     text-decoration: none;
 
 }
@@ -103,9 +119,10 @@ button{
     border-radius: 10px;
 }
 button:hover{
-    color:rgb(7, 62, 113);
-    background-color: white;
-    border:2px solid gray; 
+    color:rgb(168, 187, 204);
+    background-color: rgb(220, 18, 193);
+    transition-duration: 2s;
+    transform: translateY(-5px); 
 }
 iframe,button{
     display: block;
@@ -224,10 +241,12 @@ input{
     border:none;
     border-radius: 10px;
 }
+
 input:focus{
     background-color: rgb(110, 106, 108);
     color:rgb(246, 246, 246);
 }
+
 .contact{
     background-color:rgb(240, 221, 153);
     height: 150px;
@@ -275,4 +294,17 @@ input:focus{
     color:black;
 
  }
-
+.social_icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.social_icons  a{
+    margin-left: 15px;
+    color:rgb(7, 62, 113);
+    font-size: 25px;
+}
+.social_icons a:hover{
+   color:rgb(255, 115, 0)
+}
