--- a/css/style.css
+++ b/css/style.css
@@ -20,33 +20,42 @@ html, body {
 } */
 h1{
     color: rgb(7, 62, 113);
-    font-size: 20px;
-    text-shadow: 4px 4px 4px rgb(218, 165, 31);
+    font-size: 30px;
+    text-shadow: 4px 4px 4px rgb(206, 126, 14);
     text-align: center;
-    text-decoration: underline;
     text-transform: uppercase;
+    margin: 2px;
+}
+h1::first-letter{
+    color: rgb(255, 11, 11);
+    font-size: 32px;
 }
 .outside_ul{
+    margin-top: 2px;
     text-align: center;
     color:rgb(5, 50, 93);
     list-style: none;
-    line-height: 20px;
+    line-height: 25px;
+    font-size: 25px;
 }
 .list_space{
     list-style: none;
-    color: rgb(207, 123, 28);
+    color: rgb(255, 110, 0);
 }
 p{
     text-align: center;
+    margin-top: 2px;
 }
 
-hr{
+/* hr{
     margin-top: 1px;
     color:rgba(100, 94, 94, 0.977);
     size:3;
     
-}
+} */
 marquee{
+    margin-top: 0px;
+    margin-bottom: 0px;
     color:rgb(9, 84, 84);
     background-color: bisque;
     height:40px;
@@ -60,7 +69,7 @@ h4{
 /* Navigation bar and Footer section  */
 nav{
     color:white;
-    height:40px;
+    height:50px;
     width:100%;
     background-color:rgb(7, 62, 113) ;
     /* display: flex;
@@ -68,7 +77,7 @@ nav{
     align-items: center; */
     text-align:center;
     /* padding-left: 12px; */
-    padding-top: 10px;
+    padding-top: 13px;
     
 }
 #menu{
@@ -82,12 +91,12 @@ footer{
     width:100%;
     background-color:rgb(7, 62, 113) ;
     text-align: center;
-    padding-top: 13px;
+    padding-top: px;
 }
 #foot{
     margin-top: 15px;
-    padding-top:1px;
-    font-size: 13px;
+    padding-top:10px;
+    font-size: 15px;
 }
 a{
     margin-top: 10px;
@@ -104,6 +113,7 @@ a:hover{
 h2,h3{
     color:rgb(7, 62, 113);
     text-align: center;
+    margin-bottom: 5px;
 }
 h2:hover{
     color:rgb(255, 115, 0);
@@ -114,14 +124,16 @@ button{
     height:30px;
     width:150px;
     font-size: 15px;
+    font-weight: 500;
     text-align: center;
     border: none;
     border-radius: 10px;
 }
 button:hover{
-    color:rgb(168, 187, 204);
-    background-color: rgb(220, 18, 193);
-    transition-duration: 2s;
+    color:rgb(7, 62, 113);
+    font-weight: 550;
+    background-color: rgb(244, 100, 16);
+    transition-duration: 1s;
     transform: translateY(-5px); 
 }
 iframe,button{
@@ -139,6 +151,7 @@ pre {
   overflow-x: auto;
   white-space: pre-wrap;
   word-wrap:break-word;
+  
 }
 pre:hover{
     background-color:rgb(18, 150, 150);
@@ -180,9 +193,10 @@ td{
     height:350px;
     width:350px;
     margin: auto;
-    box-shadow: 7px 7px 7px rgb(11, 90, 164);
+    box-shadow: 7px 7px 7px rgb(49, 47, 45);
     /* border: 2px solid rgb(7, 62, 113);
     padding:5px */
+    border-radius: 7px;
 }
 .img-size:hover{
     transform: scale(1.0985);
@@ -192,8 +206,13 @@ td{
     width: 100%;
     background-image: url("/images/hero.png");
     background-repeat: no-repeat;
-    background-position:center;
+    background-position:100% 100%;
     background-size:cover;
+    
+}
+#hero_p{
+    font-weight: 500;
+    font-size: 20px;
 }
 /* .hero_text{
     text-align: right;
@@ -275,6 +294,7 @@ input:focus{
     border-radius: 15px;
 }
 #space{
+   margin-bottom: 5px;
    padding-top: 150px;
    font-size: 24px;
    color:rgb(7, 62, 113);
