--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ nav{
     text-align:center;
     /* padding-left: 12px; */
     padding-top: 13px;
-    z-index:1000;
+    z-index:1030;
 }
 #menu{
     padding-left: 10px;
@@ -337,21 +337,52 @@ input:focus{
 .social_icons a:hover{
    color:rgb(255, 115, 0)
 }
-@media (min-width:100px) and (max-width:614px){
+@media (min-width:200px) and (max-width:393px){
+    h1{
+        font-size: 20px;
+        
+    }
+    nav{
+        z-index: 1030;
+    }
+    .hero{
+        height:200px;
+        width: 100%;
+        background-image: url("/images/hero.png");
+        background-repeat: no-repeat;
+        background-position:100% 100%;
+        background-size:cover;
+        margin-top:-25px;
+    }
+    #space{
+        font-size: 17px;
+        padding-top: 60px;
+    }
+    #hero_p{
+        font-size: 15px;
+    }
+    a{
+        font-size: 15px;
+    }
+}
+@media (min-width:394px) and (max-width:513px){
     h1{
         font-size: 20px;
     }
     .hero{
-        height:400px;
+        height:350px;
         width: 100%;
         background-image: url("/images/hero.png");
         background-repeat: no-repeat;
         background-position:100% 100%;
         background-size:contain;
-        margin-top:-125px;
+        margin-top:-135px;
     }
     #space{
-        padding-top: 200px;
+        padding-top: 175px;
+    }
+    a{
+        font-size: 17px;
     }
 }
 @media (min-width:840px) {
